--- a/strand/iOS/Strand/Strand/DFSmallCardTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSmallCardTableViewCell.xib
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="263" id="E3U-vf-HcS" customClass="DFCardTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="142"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E3U-vf-HcS" id="GV3-Ss-qee">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="191"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5LI-WE-dLw" customClass="DFOutlineSubviewsView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pJ3-0X-1LU" userLabel="Solid Background">
-                                <rect key="frame" x="8" y="5" width="304" height="131"/>
+                                <rect key="frame" x="8" y="5" width="304" height="143"/>
                                 <subviews>
                                     <collectionView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Ej9-nj-KOA">
-                                        <rect key="frame" x="0.0" y="53" width="304" height="78"/>
+                                        <rect key="frame" x="8" y="53" width="288" height="78"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="999" constant="78" id="0V9-df-QKG"/>
@@ -36,8 +37,8 @@
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9UN-Wm-m11" userLabel="Info Wrapper">
                                         <rect key="frame" x="8" y="10" width="263" height="33"/>
                                         <subviews>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="900" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbm-9P-zLf">
-                                                <rect key="frame" x="72" y="0.0" width="191" height="17"/>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="900" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbm-9P-zLf">
+                                                <rect key="frame" x="78" y="0.0" width="36" height="17"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="17" id="WkO-bB-lVn"/>
                                                 </constraints>
@@ -50,10 +51,18 @@
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Swap with" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AdW-bJ-lcN">
-                                                <rect key="frame" x="0.0" y="0.0" width="68" height="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" text="Actor prefix" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AdW-bJ-lcN">
+                                                <rect key="frame" x="0.0" y="0.0" width="75" height="17"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="17" id="eM5-06-BiK"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Actor suffix" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfq-Pz-HRU">
+                                                <rect key="frame" x="117" y="0.0" width="73" height="17"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="17" id="RqH-If-Yfm"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <nil key="highlightedColor"/>
@@ -64,15 +73,19 @@
                                             <constraint firstItem="Fbm-9P-zLf" firstAttribute="top" secondItem="9UN-Wm-m11" secondAttribute="top" id="0rd-xL-KUy"/>
                                             <constraint firstItem="Kzo-2h-WiA" firstAttribute="leading" secondItem="9UN-Wm-m11" secondAttribute="leading" id="1JL-A8-7y9"/>
                                             <constraint firstItem="Kzo-2h-WiA" firstAttribute="top" secondItem="Fbm-9P-zLf" secondAttribute="bottom" constant="1" id="8hc-gY-d9e"/>
+                                            <constraint firstItem="sfq-Pz-HRU" firstAttribute="centerY" secondItem="Fbm-9P-zLf" secondAttribute="centerY" id="9as-33-KWf"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sfq-Pz-HRU" secondAttribute="trailing" id="9ma-YR-ayx"/>
                                             <constraint firstAttribute="trailing" secondItem="Kzo-2h-WiA" secondAttribute="trailing" id="BGi-AR-2YX"/>
-                                            <constraint firstAttribute="trailing" secondItem="Fbm-9P-zLf" secondAttribute="trailing" id="Cc0-ZD-79M"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fbm-9P-zLf" secondAttribute="trailing" priority="999" id="Cc0-ZD-79M"/>
                                             <constraint firstAttribute="trailing" secondItem="Kzo-2h-WiA" secondAttribute="trailing" id="Hkr-7E-y7Z"/>
                                             <constraint firstItem="AdW-bJ-lcN" firstAttribute="leading" secondItem="9UN-Wm-m11" secondAttribute="leading" id="LUZ-bg-gVU"/>
+                                            <constraint firstItem="Fbm-9P-zLf" firstAttribute="leading" secondItem="9UN-Wm-m11" secondAttribute="leading" priority="700" id="Ns9-1O-8ZL"/>
                                             <constraint firstAttribute="bottom" secondItem="Kzo-2h-WiA" secondAttribute="bottom" id="Qh4-Mw-30g"/>
                                             <constraint firstItem="Kzo-2h-WiA" firstAttribute="top" secondItem="9UN-Wm-m11" secondAttribute="top" priority="700" id="Uk0-7S-aP1"/>
+                                            <constraint firstItem="sfq-Pz-HRU" firstAttribute="leading" secondItem="Fbm-9P-zLf" secondAttribute="trailing" constant="3" id="YBB-Sa-2vJ"/>
                                             <constraint firstItem="AdW-bJ-lcN" firstAttribute="centerY" secondItem="Fbm-9P-zLf" secondAttribute="centerY" id="bMb-D3-hbg"/>
                                             <constraint firstAttribute="centerY" secondItem="Kzo-2h-WiA" secondAttribute="centerY" priority="800" id="jwt-08-3Oo"/>
-                                            <constraint firstItem="Fbm-9P-zLf" firstAttribute="leading" secondItem="AdW-bJ-lcN" secondAttribute="trailing" constant="4" id="r0c-YI-pMB"/>
+                                            <constraint firstItem="Fbm-9P-zLf" firstAttribute="leading" secondItem="AdW-bJ-lcN" secondAttribute="trailing" constant="3" id="r0c-YI-pMB"/>
                                             <constraint firstAttribute="height" constant="33" id="z5n-fL-zzO"/>
                                         </constraints>
                                     </view>
@@ -101,7 +114,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUa-rH-Ja9" customClass="DFCircleBadge">
-                                        <rect key="frame" x="267" y="94" width="29" height="29"/>
+                                        <rect key="frame" x="267" y="106" width="29" height="29"/>
                                         <color key="backgroundColor" red="0.96078431369999995" green="0.31764705879999999" blue="0.18823529410000001" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="29" id="1P8-pP-scL"/>
@@ -116,14 +129,14 @@
                                     <constraint firstItem="2bz-BX-pwC" firstAttribute="top" secondItem="pJ3-0X-1LU" secondAttribute="top" id="Bxh-g2-MoI"/>
                                     <constraint firstAttribute="trailing" secondItem="RUa-rH-Ja9" secondAttribute="trailing" constant="8" id="FAF-SG-tWS"/>
                                     <constraint firstItem="Ej9-nj-KOA" firstAttribute="top" secondItem="9UN-Wm-m11" secondAttribute="bottom" constant="10" id="FHa-do-k9e"/>
-                                    <constraint firstItem="Ej9-nj-KOA" firstAttribute="leading" secondItem="pJ3-0X-1LU" secondAttribute="leading" id="KzQ-iZ-1oV"/>
+                                    <constraint firstItem="Ej9-nj-KOA" firstAttribute="leading" secondItem="pJ3-0X-1LU" secondAttribute="leading" constant="8" id="KzQ-iZ-1oV"/>
                                     <constraint firstItem="9UN-Wm-m11" firstAttribute="top" secondItem="pJ3-0X-1LU" secondAttribute="top" constant="10" id="RVi-fU-ofi"/>
                                     <constraint firstItem="2bz-BX-pwC" firstAttribute="top" secondItem="pJ3-0X-1LU" secondAttribute="top" id="Yy9-CX-ghC"/>
                                     <constraint firstItem="9UN-Wm-m11" firstAttribute="leading" secondItem="pJ3-0X-1LU" secondAttribute="leading" constant="8" id="ZVl-K6-mH9"/>
                                     <constraint firstAttribute="bottom" secondItem="RUa-rH-Ja9" secondAttribute="bottom" constant="8" id="kQq-br-D1n"/>
-                                    <constraint firstAttribute="trailing" secondItem="Ej9-nj-KOA" secondAttribute="trailing" id="pjQ-9r-LDF"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ej9-nj-KOA" secondAttribute="trailing" constant="8" id="pjQ-9r-LDF"/>
                                     <constraint firstItem="2bz-BX-pwC" firstAttribute="leading" secondItem="9UN-Wm-m11" secondAttribute="trailing" constant="2" id="rV1-Bt-hJJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="Ej9-nj-KOA" secondAttribute="bottom" id="uFg-XC-diH"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ej9-nj-KOA" secondAttribute="bottom" constant="12" id="uFg-XC-diH"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -162,8 +175,9 @@
                 <outlet property="contextLabel" destination="Kzo-2h-WiA" id="Ids-nO-ncJ"/>
                 <outlet property="countBadge" destination="RUa-rH-Ja9" id="wbk-AN-ti4"/>
                 <outlet property="flowLayout" destination="FGC-c5-3je" id="gF3-Dz-8a4"/>
-                <outlet property="peopleExplanationLabel" destination="AdW-bJ-lcN" id="3jR-mV-Wb3"/>
                 <outlet property="peopleLabel" destination="Fbm-9P-zLf" id="JFj-pJ-BF5"/>
+                <outlet property="peoplePrefixLabel" destination="AdW-bJ-lcN" id="hqX-4F-6AJ"/>
+                <outlet property="peopleSuffixLabel" destination="sfq-Pz-HRU" id="OMq-Dr-ixK"/>
                 <outlet property="solidBackgroundView" destination="pJ3-0X-1LU" id="v5d-gb-u5k"/>
             </connections>
             <point key="canvasLocation" x="198" y="341"/>
