--- a/strand/iOS/Strand/Strand/DFSelectSuggestionsViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSelectSuggestionsViewController.xib
@@ -3,11 +3,14 @@
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFSelectSuggestionsViewController">
             <connections>
                 <outlet property="collectionView" destination="KQh-Th-NV6" id="fdG-H6-6g9"/>
+                <outlet property="doneButton" destination="C11-UV-jXl" id="kaM-R6-fhT"/>
+                <outlet property="doneButtonWrapper" destination="N3Z-sB-DSJ" id="Ucc-Io-DBD"/>
                 <outlet property="flowLayout" destination="O4B-O5-fcO" id="bs2-X1-vYf"/>
                 <outlet property="locationLabel" destination="SUO-wD-Yct" id="Hu3-4c-fDA"/>
                 <outlet property="selectAllButton" destination="caI-fJ-5Vv" id="w0S-J5-y1W"/>
@@ -69,16 +72,37 @@
                         <constraint firstItem="caI-fJ-5Vv" firstAttribute="top" secondItem="XWj-Al-zFy" secondAttribute="top" constant="10" id="ycB-2t-q9k"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N3Z-sB-DSJ">
+                    <rect key="frame" x="0.0" y="546" width="600" height="54"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C11-UV-jXl" customClass="DFActionButton">
+                            <rect key="frame" x="150" y="12" width="300" height="30"/>
+                            <state key="normal" title="Done">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="centerX" secondItem="C11-UV-jXl" secondAttribute="centerX" id="Ca1-Ek-iBg"/>
+                        <constraint firstItem="C11-UV-jXl" firstAttribute="width" relation="greaterThanOrEqual" secondItem="N3Z-sB-DSJ" secondAttribute="width" multiplier="0.5" id="WwJ-cb-ZEP"/>
+                        <constraint firstAttribute="centerY" secondItem="C11-UV-jXl" secondAttribute="centerY" id="o2Q-dO-Qfx"/>
+                        <constraint firstAttribute="height" constant="54" id="xfM-vC-YNX"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <gestureRecognizers/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="KQh-Th-NV6" secondAttribute="bottom" id="CX7-ji-tT4"/>
                 <constraint firstAttribute="trailing" secondItem="XWj-Al-zFy" secondAttribute="trailing" id="Cfv-ev-2Nn"/>
+                <constraint firstItem="N3Z-sB-DSJ" firstAttribute="leading" secondItem="t0i-Zb-EsR" secondAttribute="leading" id="MFw-rx-4Nl"/>
+                <constraint firstAttribute="bottom" secondItem="N3Z-sB-DSJ" secondAttribute="bottom" id="SnW-Bm-slq"/>
                 <constraint firstItem="XWj-Al-zFy" firstAttribute="top" secondItem="t0i-Zb-EsR" secondAttribute="top" id="Vpf-OE-cta"/>
                 <constraint firstItem="KQh-Th-NV6" firstAttribute="leading" secondItem="t0i-Zb-EsR" secondAttribute="leading" id="XRa-aj-H00"/>
                 <constraint firstAttribute="trailing" secondItem="KQh-Th-NV6" secondAttribute="trailing" id="fRe-Xl-mIH"/>
                 <constraint firstItem="XWj-Al-zFy" firstAttribute="leading" secondItem="t0i-Zb-EsR" secondAttribute="leading" id="nVg-xZ-zCk"/>
+                <constraint firstAttribute="trailing" secondItem="N3Z-sB-DSJ" secondAttribute="trailing" id="rtH-iB-ylE"/>
                 <constraint firstItem="KQh-Th-NV6" firstAttribute="top" secondItem="XWj-Al-zFy" secondAttribute="bottom" constant="1" id="xLp-Z7-Z5S"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
