--- a/strand/iOS/Strand/Strand/DFSelectSuggestionsViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSelectSuggestionsViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -9,11 +8,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFSelectSuggestionsViewController">
             <connections>
                 <outlet property="collectionView" destination="KQh-Th-NV6" id="fdG-H6-6g9"/>
-                <outlet property="doneButton" destination="C11-UV-jXl" id="kaM-R6-fhT"/>
-                <outlet property="doneButtonWrapper" destination="N3Z-sB-DSJ" id="Ucc-Io-DBD"/>
                 <outlet property="flowLayout" destination="O4B-O5-fcO" id="bs2-X1-vYf"/>
                 <outlet property="locationLabel" destination="SUO-wD-Yct" id="Hu3-4c-fDA"/>
                 <outlet property="selectAllButton" destination="caI-fJ-5Vv" id="w0S-J5-y1W"/>
+                <outlet property="swapButton" destination="C11-UV-jXl" id="Nqx-OT-VQe"/>
+                <outlet property="swapButtonWrapper" destination="N3Z-sB-DSJ" id="eap-P5-UHO"/>
                 <outlet property="timeLabel" destination="kID-Ge-0gI" id="ruQ-AL-oen"/>
                 <outlet property="view" destination="t0i-Zb-EsR" id="Nh1-FL-lDR"/>
             </connections>
