relinking local js

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -68,8 +68,8 @@
 	}
 
 </style>
-<script src="http://dev.duffyapp.com/static/jquery-1.10.2.min.js"></script>
-<script src="http://dev.duffyapp.com/static/jquery.timeago.js"></script>
+<script src="/static/jquery-1.10.2.min.js"></script>
+<script src="/static/jquery.timeago.js"></script>
 <body>
 <div class="ui-content">
 	<div class='ui-server-id' id='ui-server-id'>
