--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -173,7 +173,7 @@ $(document).ready(function() {
 	$("#ui-server-id").css('background-color', '#C0C0C0');
   }
   else {
-	$("#ui-server-id").append('PROD <span class="ui-server-switch">('+ otherLinks +' | <a target=_blank href="http://dev.duffyapp.com/viz/summary">switch to Dev</a>)</span>'+otherLinks);
+	$("#ui-server-id").append('PROD <span class="ui-server-switch">('+ otherLinks +' | <a target=_blank href="http://dev.duffyapp.com/viz/summary">switch to Dev</a>)</span>');
 	$("#ui-server-id").css('background-color', 'orange');
   }
   $('td.timeago').each(function(){
